--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <h1>awesome.box-list</h1>
 <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
-<h2>Community</h2>
+<h2>community</h2>
 <ul>
     <li><a href="https://ohms.box" target="_blank">ohms.box</a> - My.box Community Lead.</li>
     <li><a href="https://black.box" target="_blank">black.box</a></li>
@@ -25,7 +25,7 @@
     <li><a href="https://doom.box" target="_blank">doom.box</a></li>
 </ul>
 
-<h2>Utilities</h2>
+<h2>utilities</h2>
 <ul>
     <li><a href="https://seo.box" target="_blank">seo.box</a> - SEO tools list website.</li>
     <li><a href="https://tools.box" target="_blank">tools.box</a> - A box of miscellaneous tools from text tools, image tools, and more.</li>
@@ -35,7 +35,7 @@
     <li><a href="https://register.box" target="_blank">register.box</a> - Website to monitor the primary and secondary sales of .box domains.</li>
 </ul>
 
-<h2>Projects</h2>
+<h2>projects</h2>
 <ul>
     <li><a href="https://my.box" target="_blank">my.box</a> - Web3 domains, NFTs, and digital ID solutions.</li>
     <li><a href="https://3dns.box" target="_blank">3dns.box</a> - On-chain domain registrar supporting various TLDs.</li>
@@ -50,7 +50,7 @@
     <li><a href="https://mystery.box" target="_blank">mystery.box</a> - Mystery boxes for unique ENS/DNS names with rewards for holders. A 3DNS x Coinbase Onchain Summer collab.</li>
 </ul>
 
-<h2>Brands</h2>
+<h2>brands</h2>
 <ul>
     <li><a href="https://google.box" target="_blank">google.box</a> - Redirect to <a href="https://www.google.com" target="_blank">Google</a>.</li>
     <li><a href="https://visa.box" target="_blank">visa.box</a> - Redirect to <a href="https://usa.visa.com" target="_blank">Visa</a>.</li>
@@ -60,12 +60,12 @@
     <li><a href="https://bathandbodyworks.box" target="_blank">bathandbodyworks.box</a> - Redirect to <a href="https://www.bathandbodyworks.com" target="_blank">Bath & Body Works</a>.</li>
 </ul>
 
-<h2>License Disclaimer</h2>
+<h2>license Disclaimer</h2>
 <p>
 The projects listed in this repository are external projects and are governed by their own respective licenses. The inclusion of a project in this list does not imply that it is licensed under the same terms as this repository. Please refer to each project's own repository for detailed licensing information.
 </p>
 
-<h2>License</h2>
+<h2>license</h2>
 <p>
 This repository is licensed under the CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. For more information, see the <a href="LICENSE" target="_blank">LICENSE</a> file.
 </p>
