adding banner to list.html

--- a/list.html
+++ b/list.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>awesome.box-list</title>
+    <style>
+        /* Add some styling to center and adjust the image if needed */
+        .banner {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%; /* Adjust this if you want a specific width */
+        }
+    </style>
 </head>
 <body>
 
-<h1>awesome.box-list</h1>
-<p>An awesome list of awesome .box domains being used for awesome purposes.</p>
+    <!-- Banner Image -->
+    <img src="awesome.box.png" alt="awesome.box banner" class="banner">
+
+    <h1>awesome.box-list</h1>
+    <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
 <h2>community</h2>
 <ul>
