--- a/list.html
+++ b/list.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Banner Image -->
-    <img src="awesome.box.png" alt="awesome.box banner" class="banner">
+    <img src="/awesome.box.png" alt="awesome.box banner" class="banner">
 
     <h1>awesome.box-list</h1>
     <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
