--- a/list.html
+++ b/list.html
@@ -72,7 +72,7 @@
     <li><a href="https://bathandbodyworks.box" target="_blank">bathandbodyworks.box</a> - Redirect to <a href="https://www.bathandbodyworks.com" target="_blank">Bath & Body Works</a>.</li>
 </ul>
 
-<h2>license Disclaimer</h2>
+<h2>license disclaimer</h2>
 <p>
 The projects listed in this repository are external projects and are governed by their own respective licenses. The inclusion of a project in this list does not imply that it is licensed under the same terms as this repository. Please refer to each project's own repository for detailed licensing information.
 </p>
