--- a/list.html
+++ b/list.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>awesome.box-list</title>
+
+    <!-- Link to Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    
     <style>
         /* Add some styling to center and adjust the image if needed */
         .banner {
