--- a/list.html
+++ b/list.html
@@ -6,7 +6,7 @@
     <title>awesome.box-list</title>
 
     <!-- Link to Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32"/>
     
     <style>
         /* Add some styling to center and adjust the image if needed */
