--- a/list.html
+++ b/list.html
@@ -24,7 +24,21 @@
     <img src="/awesome.box.png" alt="awesome.box banner" class="banner">
 
     <h1>awesome.box-list</h1>
-    <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
+<p>An awesome list of awesome .box domains being used for awesome purposes.</p>
+
+<div style="display: flex; gap: 20px; margin-top: 20px;">
+    <!-- First Call-to-Action -->
+    <div style="flex: 1; text-align: center;">
+        <h2>Want to get your project listed here?</h2>
+        <a href="https://guild.xyz/box/build-with-box" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">Verify your .box domain ownership</a>
+    </div>
+
+    <!-- Second Call-to-Action -->
+    <div style="flex: 1; text-align: center;">
+        <h2>Don't have a .box yet?</h2>
+        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #008CBA; color: white; text-decoration: none; border-radius: 5px;">Get one today at my.box</a>
+    </div>
+</div>
 
 <h2>community</h2>
 <ul>
