--- a/list.html
+++ b/list.html
@@ -23,22 +23,25 @@
     <!-- Banner Image -->
     <img src="/awesome.box.png" alt="awesome.box banner" class="banner">
 
-    <h1>awesome.box-list</h1>
+<h1>awesome.box-list</h1>
 <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
-<div style="display: flex; gap: 20px; margin-top: 20px;">
-    <!-- First Call-to-Action -->
+<div style="display: flex; justify-content: space-between; margin-top: 20px;">
+
+    <!-- First Call-to-Action (low-key style) -->
     <div style="flex: 1; text-align: center;">
-        <h2>Want to get your project listed here?</h2>
-        <a href="https://guild.xyz/box/build-with-box" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">Verify your .box domain ownership</a>
+        <h3 style="font-size: 1.2em; margin-bottom: 10px;">Want to get your project listed here?</h3>
+        <a href="https://guild.xyz/box/build-with-box" target="_blank" style="color: #007bff; text-decoration: underline;">Verify your .box domain ownership and get GitHub repo Access Role</a>
     </div>
 
-    <!-- Second Call-to-Action -->
+    <!-- Second Call-to-Action (low-key style) -->
     <div style="flex: 1; text-align: center;">
-        <h2>Don't have a .box yet?</h2>
-        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #008CBA; color: white; text-decoration: none; border-radius: 5px;">Get one today at my.box</a>
+        <h3 style="font-size: 1.2em; margin-bottom: 10px;">Don't have a .box yet?</h3>
+        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="color: #007bff; text-decoration: underline;">Get one today at my.box</a>
     </div>
+
 </div>
+
 
 <h2>community</h2>
 <ul>
