--- a/list.html
+++ b/list.html
@@ -26,21 +26,24 @@
 <h1>awesome.box-list</h1>
 <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
-<div style="display: flex; justify-content: space-between; margin-top: 20px;">
+<div style="margin-top: 20px;">
+    <!-- First Call-to-Action (low-key paragraph style) -->
+    <p style="font-size: 0.9em;">
+        <strong>Want to get your project listed here?</strong> 
+        <a href="https://guild.xyz/box/build-with-box" target="_blank" style="text-decoration: underline; color: #007bff;">
+            Verify your .box domain ownership and get the GitHub repo Access Role
+        </a>
+    </p>
 
-    <!-- First Call-to-Action (low-key style) -->
-    <div style="flex: 1; text-align: center;">
-        <h3 style="font-size: 1.2em; margin-bottom: 10px;">Want to get your project listed here?</h3>
-        <a href="https://guild.xyz/box/build-with-box" target="_blank" style="color: #007bff; text-decoration: underline;">Verify your .box domain ownership and get GitHub repo Access Role</a>
-    </div>
-
-    <!-- Second Call-to-Action (low-key style) -->
-    <div style="flex: 1; text-align: center;">
-        <h3 style="font-size: 1.2em; margin-bottom: 10px;">Don't have a .box yet?</h3>
-        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="color: #007bff; text-decoration: underline;">Get one today at my.box</a>
-    </div>
-
+    <!-- Second Call-to-Action (low-key paragraph style) -->
+    <p style="font-size: 0.9em;">
+        <strong>Don't have a .box yet?</strong> 
+        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="text-decoration: underline; color: #007bff;">
+            Get one today at my.box
+        </a>
+    </p>
 </div>
+
 
 
 <h2>community</h2>
