--- a/list.html
+++ b/list.html
@@ -29,9 +29,9 @@
 <div style="margin-top: 20px;">
     <!-- First Call-to-Action (low-key paragraph style) -->
     <p style="font-size: 0.9em;">
-        <strong>Want to get your project listed here?</strong> 
+        <strong>Want to get your .box project listed here?</strong> 
         <a href="https://guild.xyz/box/build-with-box" target="_blank" style="text-decoration: underline; color: #007bff;">
-            Verify your .box domain ownership and get the GitHub repo Access Role
+            Get access to the awesome.box repo
         </a>
     </p>
 
