--- a/list.html
+++ b/list.html
@@ -29,7 +29,7 @@
 <div style="margin-top: 20px;">
     <!-- First Call-to-Action (low-key paragraph style) -->
     <p style="font-size: 0.9em;">
-        <strong>Want to get your .box project listed here?</strong> 
+        <p>Want to get your .box project listed here?</p> 
         <a href="https://guild.xyz/box/build-with-box" target="_blank" style="text-decoration: underline; color: #007bff;">
             Get access to the awesome.box repo
         </a>
@@ -37,7 +37,7 @@
 
     <!-- Second Call-to-Action (low-key paragraph style) -->
     <p style="font-size: 0.9em;">
-        <strong>Don't have a .box yet?</strong> 
+        <p>Don't have a .box yet?</p> 
         <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank" style="text-decoration: underline; color: #007bff;">
             Get one today at my.box
         </a>
