--- a/list.html
+++ b/list.html
@@ -7,8 +7,16 @@
 
     <!-- Link to Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32"/>
-
+    
     <style>
+        /* Add some styling to center and adjust the image if needed */
+        .banner {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%; /* Adjust this if you want a specific width */
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -21,36 +29,39 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 250px;
+            width: 150px;
             padding: 10px;
-            font-family: monospace;
-            color: #333;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
+            font-size: 0.9em;
             z-index: 999;
         }
 
+        /* Styling for the ASCII hexagon */
         .hexagon {
-            white-space: pre; /* Preserve ASCII formatting */
             font-family: monospace;
             line-height: 1.2em;
             margin-bottom: 20px;
-            background-color: #f0f0f0;
-            border-radius: 5px;
             padding: 15px;
+            background-color: #e0e0e0;
+            border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .cta1 {
-            top: 100px;
-        }
-
-        .cta2 {
-            top: 300px;
         }
 
         .hexagon a {
             text-decoration: underline;
             color: #007bff;
+        }
+
+        /* Floating effect */
+        .cta1 {
+            top: 100px;
+        }
+
+        .cta2 {
+            top: 250px;
         }
     </style>
 </head>
@@ -62,30 +73,18 @@
     <h1>awesome.box-list</h1>
     <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
-    <!-- Floating Hexagons with ASCII Hexagon Shape -->
+    <!-- Floating Hexagons -->
     <div class="floating-hexagon cta1">
         <div class="hexagon">
-            +--------------------+<br>
-           /                          \ <br>
-          /   Want to get your   \ <br>
-         /   .box project listed?   \ <br>
-         +--------------------+<br>
-          \  <a href="https://guild.xyz/box/build-with-box" target="_blank">Get access to awesome.box repo</a>  /<br>
-           \                        /<br>
-            +--------------------+
+            <p>Want to get your .box project listed here?</p>
+            <a href="https://guild.xyz/box/build-with-box" target="_blank">Get access to the awesome.box repo</a>
         </div>
     </div>
 
     <div class="floating-hexagon cta2">
         <div class="hexagon">
-            +-------------------+<br>
-           /                          \ <br>
-          /    Don't have a .box?   \ <br>
-         /   Get one today at my.box   \ <br>
-         +-------------------+<br>
-          \  <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">Get one at my.box</a>  /<br>
-           \                        /<br>
-            +-------------------+
+            <p>Don't have a .box yet?</p>
+            <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">Get one today at my.box</a>
         </div>
     </div>
 
