--- a/list.html
+++ b/list.html
@@ -7,61 +7,68 @@
 
     <!-- Link to Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32"/>
-    
-    <style>
-        /* Add some styling to center and adjust the image if needed */
-        .banner {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 100%; /* Adjust this if you want a specific width */
-        }
 
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
         }
 
-        .floating-hexagon {
-            position: fixed;
-            right: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 150px;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            font-size: 0.9em;
-            z-index: 999;
+        .banner {
+            display: block;
+            margin: 0 auto;
+            width: 100%; /* Adjust this if you want a specific width */
+            max-width: 600px;
         }
 
-        /* Styling for the ASCII hexagon */
-        .hexagon {
-            font-family: monospace;
-            line-height: 1.2em;
-            margin-bottom: 20px;
-            padding: 15px;
-            background-color: #e0e0e0;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        h1, p {
+            text-align: left;
         }
 
-        .hexagon a {
-            text-decoration: underline;
+        /* Styling for CTA links */
+        .cta-links {
+            margin-top: 10px;
+        }
+
+        .cta-links a {
+            margin-right: 20px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1em;
             color: #007bff;
+            display: inline-block;
         }
 
-        /* Floating effect */
-        .cta1 {
-            top: 100px;
+        .cta-links a:hover {
+            text-decoration: underline;
         }
 
-        .cta2 {
-            top: 250px;
+        ul {
+            padding-left: 15px; /* Brings the list closer to the left side */
+        }
+
+        /* Responsive adjustments for mobile */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 1.5em;
+            }
+
+            p {
+                font-size: 1em;
+            }
+
+            ul {
+                padding-left: 10px; /* Make list padding smaller for mobile */
+            }
+
+            .cta-links a {
+                font-size: 0.9em; /* Slightly smaller text for CTA links on mobile */
+            }
         }
     </style>
 </head>
