--- a/list.html
+++ b/list.html
@@ -80,21 +80,11 @@
     <h1>awesome.box-list</h1>
     <p>An awesome list of awesome .box domains being used for awesome purposes.</p>
 
-    <!-- Floating Hexagons -->
-    <div class="floating-hexagon cta1">
-        <div class="hexagon">
-            <a href="https://guild.xyz/box/build-with-box" target="_blank">Get access to the awesome.box repo</a>
-        </div>
+    <!-- CTA Links -->
+    <div class="cta-links">
+        <a href="https://guild.xyz/box/build-with-box" target="_blank">⬢ Get your .box project added to the list</a>
+        <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">⬡ Get a .box domain</a>
     </div>
-
-    <div class="floating-hexagon cta2">
-        <div class="hexagon">
-            <p>Don't have a .box yet?</p>
-            <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">Get one today at my.box</a>
-        </div>
-    </div>
-
-    <h2>community</h2>
 
 <ul>
     <li><a href="https://ohms.box" target="_blank">ohms.box</a> - My.box Community Lead.</li>
