--- a/list.html
+++ b/list.html
@@ -86,6 +86,7 @@
         <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">📦 Get a .box domain</a>
     </div>
 
+<h2>community</h2>
 <ul>
     <li><a href="https://ohms.box" target="_blank">ohms.box</a> - My.box Community Lead.</li>
     <li><a href="https://black.box" target="_blank">black.box</a></li>
