--- a/list.html
+++ b/list.html
@@ -82,7 +82,7 @@
 
     <!-- CTA Links -->
     <div class="cta-links">
-        <a href="https://guild.xyz/box/build-with-box" target="_blank">➕ Get your .box project added to the list</a>
+        <a href="https://guild.xyz/box/build-with-box" target="_blank">📌 Get your .box project added to the list</a>
         <a href="https://site.my.box/?domain=ohms.box&ref=3ac872" target="_blank">📦 Get a .box domain</a>
     </div>
 
