--- a/list.html
+++ b/list.html
@@ -17,9 +17,9 @@
 
         .banner {
             display: block;
-            margin: 0 auto;
+            margin-left: auto;
+            margin-right: auto;
             width: 100%; /* Adjust this if you want a specific width */
-            max-width: 600px;
         }
 
         h1, p {
