--- a/list.html
+++ b/list.html
@@ -124,8 +124,8 @@
 
 <h2>projects</h2>
 <ul>
-    <li><a href="https://my.box" target="_blank">my.box</a> - Web3 domains, NFTs, and digital ID solutions.</li>
-    <li><a href="https://3dns.box" target="_blank">3dns.box</a> - On-chain domain registrar supporting various TLDs.</li>
+    <li><a href="https://my.box" target="_blank">my.box</a> - The most functional domain name across the internet.</li>
+    <li><a href="https://3dns.box" target="_blank">3dns.box</a> - Onchain domain registrar supporting various TLDs.</li>
     <li><a href="https://bike.box" target="_blank">bike.box</a> - Website for the League of American Bicyclists, providing resources to find local advocacy groups, bike shops, instructors, clubs, and classes.</li>
     <li><a href="https://foto.box" target="_blank">foto.box</a> - Platform to find and rent photo booths in Germany.</li>
     <li><a href="https://brand.box" target="_blank">brand.box</a> - Redirects to <a href="https://top.digital" target="_blank">Top Digital</a>, a domain branding marketplace.</li>
