--- a/list.html
+++ b/list.html
@@ -149,7 +149,7 @@
 
 <h2>license disclaimer</h2>
 <p>
-:) The projects listed on this page are external to My.box Inc. and are governed by their own respective licenses. The inclusion of a project on this list does not imply that it is licensed under the same terms as this list and underlying repository. Please refer to each project's own repository for detailed licensing information.
+hello world The projects listed on this page are external to My.box Inc. and are governed by their own respective licenses. The inclusion of a project on this list does not imply that it is licensed under the same terms as this list and underlying repository. Please refer to each project's own repository for detailed licensing information.
 </p>
 
 </body>
