--- a/list.html
+++ b/list.html
@@ -94,7 +94,7 @@
     <!-- CTA Links -->
     <div class="cta-links">
         <a href="https://guild.xyz/box/build-with-box" target="_blank">Get your .box project added to the list</a>
-        <a href="https://my.box/?ref=3ac872" target="_blank">Get a .box domain</a>
+        <a href="https://my.box/?ref=edc523" target="_blank">Get a .box domain</a>
     </div>
 
 <h2>community</h2>
