--- a/list.html
+++ b/list.html
@@ -145,7 +145,7 @@
     <li><a href="https://stars.box" target="_blank">stars.box</a></li>
     <li><a href="https://mystic.box" target="_blank">mystic.box</a></li>
     <li><a href="https://doom.box" target="_blank">doom.box</a></li>
-    <li><a href="https://seansky.box" target="_blank">seansky.box</a> - I'm crypto user focus on finding airdrops, nodes and giving tutorials on my twitter.</li>
+    <li><a href="https://seansky.box" target="_blank">seansky.box</a> - I'm a crypto user focused on finding airdrops, nodes and giving tutorials on my twitter.</li>
 </ul>
 
 <h2>utilities</h2>
