--- a/list.html
+++ b/list.html
@@ -140,7 +140,7 @@
     <li><a href="https://phantom.box" target="_blank">phantom.box</a></li>
     <li><a href="https://bing.box" target="_blank">bing.box</a></li>
     <li><a href="https://hunter.box" target="_blank">hunter.box</a></li>
-    <li><a href="https://mike.box" target="_blank">mike.box</a></li>
+    <li><a href="https://mike.box" target="_blank">mike.box</a> - Web developer, digital marketing strategist, and drone pilot.</li>
     <li><a href="https://smith.box" target="_blank">smith.box</a></li>
     <li><a href="https://stars.box" target="_blank">stars.box</a></li>
     <li><a href="https://mystic.box" target="_blank">mystic.box</a></li>
