--- a/list.html
+++ b/list.html
@@ -162,15 +162,16 @@
 <ul>
     <li><a href="https://my.box" target="_blank">my.box</a> - The most functional domain name across the internet.</li>
     <li><a href="https://3dns.box" target="_blank">3dns.box</a> - Onchain domain registrar supporting various TLDs.</li>
-    <li><a href="https://bike.box" target="_blank">bike.box</a> - Website for the League of American Bicyclists, providing resources to find local advocacy groups, bike shops, instructors, clubs, and classes.</li>
-    <li><a href="https://foto.box" target="_blank">foto.box</a> - Platform to find and rent photo booths in Germany.</li>
-    <li><a href="https://brand.box" target="_blank">brand.box</a> - Redirects to <a href="https://top.digital" target="_blank">Top Digital</a>, a domain branding marketplace.</li>
-    <li><a href="https://nouns.wtf" target="_blank">nouns.box</a> - Redirects to <a href="https://nouns.wtf" target="_blank">Nouns</a>, a DAO focused on making a positive impact by funding ideas and fostering collaboration.</li>
-    <li><a href="https://hyperdrive.box" target="_blank">hyperdrive.box</a> - DeFi platform offering customizable yield strategies.</li>
-    <li><a href="https://snapshot.box" target="_blank">snapshot.box</a> - A fully integrated suite to manage DAO governance.</li>
     <li><a href="https://chain.box" target="_blank">chain.box</a> - Landing page for the 3DNS x Optimism x .box collaboration in which .chain and .super gTLDs will be pursued in 2025.</li>
     <li><a href="https://super.box" target="_blank">super.box</a> - Redirect to <a href="https://chain.box" target="_blank">chain.box</a>.</li>
     <li><a href="https://mystery.box" target="_blank">mystery.box</a> - Mystery boxes for unique ENS/DNS names with rewards for holders. A 3DNS x Coinbase Onchain Summer collab.</li>
+    <li><a href="https://nouns.wtf" target="_blank">nouns.box</a> - Redirects to <a href="https://nouns.wtf" target="_blank">Nouns</a>, a DAO focused on making a positive impact by funding ideas and fostering collaboration.</li>
+    <li><a href="https://hyperdrive.box" target="_blank">hyperdrive.box</a> - DeFi platform offering customizable yield strategies.</li>
+    <li><a href="https://snapshot.box" target="_blank">snapshot.box</a> - A fully integrated suite to manage DAO governance.</li>
+    <li><a href="https://phi.box" target="_blank">phi.box</a> - The visualization layer for onchain identity.</li>
+    <li><a href="https://bike.box" target="_blank">bike.box</a> - Website for the League of American Bicyclists, providing resources to find local advocacy groups, bike shops, instructors, clubs, and classes.</li>
+    <li><a href="https://foto.box" target="_blank">foto.box</a> - Platform to find and rent photo booths in Germany.</li>
+    <li><a href="https://brand.box" target="_blank">brand.box</a> - Redirects to <a href="https://top.digital" target="_blank">Top Digital</a>, a domain branding marketplace.</li>
 </ul>
 
 <h2>brands</h2>
