--- a/list.html
+++ b/list.html
@@ -146,7 +146,7 @@
     <li><a href="https://mystic.box" target="_blank">mystic.box</a></li>
     <li><a href="https://doom.box" target="_blank">doom.box</a></li>
     <li><a href="https://seansky.box" target="_blank">seansky.box</a> - I'm a crypto user focused on finding airdrops, nodes and giving tutorials on my twitter.</li>
-    <li><a href="https://onigiri.box" target="_blank">onigiri.box</a> - A DeFi Snack Packed with Flavor! 🍙 Just like the perfect onigiri, this project is full of variety and flavor, bringing you decentralized finance wrapped in simplicity.</li>
+    <li><a href="https://onigiri.box" target="_blank">onigiri.box</a> - A DeFi Snack Packed with Flavor! Just like the perfect onigiri, this project is full of variety and flavor, bringing you decentralized finance wrapped in simplicity.</li>
     <li><a href="https://cypherpunk.box" target="_blank">cypherpunk.box</a> - A clean forwarder for my X profile, to keep it simple and professional.</li>
 </ul>
 
