--- a/list.html
+++ b/list.html
@@ -188,7 +188,7 @@
 
 <h2>license disclaimer</h2>
     <p>
-        The projects listed on this page are external to My.box Inc. and are governed by their own respective licenses. The inclusion of a project on this list does not imply that it is licensed under the same terms as this list and underlying repository. Please refer to each project's own repository for detailed licensing information.
+        The domains listed on this page are independently owned and operated by third parties and are not directly affiliated with My.box Inc. My.box Inc. does not endorse, manage, or take responsibility for the content, services, or activities hosted on these domains. Please review each domain’s individual site and policies for further information.
     </p>
 
 </body>
