--- a/list.html
+++ b/list.html
@@ -186,7 +186,7 @@
     <li><a href="https://bathandbodyworks.box" target="_blank">bathandbodyworks.box</a> - Redirect to <a href="https://www.bathandbodyworks.com" target="_blank">Bath & Body Works</a>.</li>
 </ul>
 
-<h2>license disclaimer</h2>
+<h3>disclaimer</h3>
     <p>
         The domains listed on this page are independently owned and operated by third parties and are not directly affiliated with My.box Inc. My.box Inc. does not endorse, manage, or take responsibility for the content, services, or activities hosted on these domains. Please review each domain’s individual site and policies for further information.
     </p>
