--- a/list.html
+++ b/list.html
@@ -141,13 +141,16 @@
     <li><a href="https://bing.box" target="_blank">bing.box</a></li>
     <li><a href="https://hunter.box" target="_blank">hunter.box</a></li>
     <li><a href="https://mike.box" target="_blank">mike.box</a> - Web developer, digital marketing strategist, and drone pilot.</li>
-    <li><a href="https://smith.box" target="_blank">smith.box</a></li>
+    <li><a href="https://smith.box" target="_blank">smith.box</a> - Decentralized Multichain Digital ID Service.</li>
+    <li><a href="blockchaineazy.box" target="_blank">blockchaineazy.box</a> - My personal portfolio as a Web3 Community Manager/Web Designer.</li>
     <li><a href="https://stars.box" target="_blank">stars.box</a></li>
     <li><a href="https://mystic.box" target="_blank">mystic.box</a></li>
     <li><a href="https://doom.box" target="_blank">doom.box</a></li>
     <li><a href="https://seansky.box" target="_blank">seansky.box</a> - I'm a crypto user focused on finding airdrops, nodes and giving tutorials on my twitter.</li>
     <li><a href="https://onigiri.box" target="_blank">onigiri.box</a> - A DeFi Snack Packed with Flavor! Just like the perfect onigiri, this project is full of variety and flavor, bringing you decentralized finance wrapped in simplicity.</li>
     <li><a href="https://cypherpunk.box" target="_blank">cypherpunk.box</a> - A clean forwarder for my X profile, to keep it simple and professional.</li>
+    <li><a href="https://yx.box" target="_blank">yx.box</a> - A blockchain dice game launchpad. Let's make Ethereum great again! By Singularity DAO.</li>
+    <li><a href="https://dude.box" target="_blank">dude.box</a> - A community where men can be real, feel supported, and look good doing it.</li>
 </ul>
 
 <h2>utilities</h2>
