--- a/list.html
+++ b/list.html
@@ -134,7 +134,7 @@
 
 <h2>community</h2>
 <ul>
-    <li><a href="https://ohms.box" target="_blank">ohms.box</a> - My.box Community Lead.</li>
+    <li><a href="https://ohms.box" target="_blank">ohms.box</a> - My profile page as the My.box Community Manager.</li>
     <li><a href="https://black.box" target="_blank">black.box</a></li>
     <li><a href="https://hax.box" target="_blank">hax.box</a></li>
     <li><a href="https://phantom.box" target="_blank">phantom.box</a></li>
@@ -142,7 +142,7 @@
     <li><a href="https://hunter.box" target="_blank">hunter.box</a></li>
     <li><a href="https://mike.box" target="_blank">mike.box</a> - Web developer, digital marketing strategist, and drone pilot.</li>
     <li><a href="https://smith.box" target="_blank">smith.box</a> - Decentralized Multichain Digital ID Service.</li>
-    <li><a href="blockchaineazy.box" target="_blank">blockchaineazy.box</a> - My personal portfolio as a Web3 Community Manager/Web Designer.</li>
+    <li><a href="https://blockchaineazy.box" target="_blank">blockchaineazy.box</a> - My personal portfolio as a Web3 Community Manager/Web Designer.</li>
     <li><a href="https://stars.box" target="_blank">stars.box</a></li>
     <li><a href="https://mystic.box" target="_blank">mystic.box</a></li>
     <li><a href="https://doom.box" target="_blank">doom.box</a></li>
