--- a/list.html
+++ b/list.html
@@ -177,7 +177,8 @@
     <li><a href="https://bike.box" target="_blank">bike.box</a> - Website for the League of American Bicyclists, providing resources to find local advocacy groups, bike shops, instructors, clubs, and classes.</li>
     <li><a href="https://foto.box" target="_blank">foto.box</a> - Platform to find and rent photo booths in Germany.</li>
     <li><a href="https://brand.box" target="_blank">brand.box</a> - Redirects to <a href="https://top.digital" target="_blank">Top Digital</a>, a domain branding marketplace.</li>
-    <li><a href="symbiotic.box" target="_blank">brand.box</a> - Redirects to <a href="https://https://symbiotic.fi/" target="_blank">Symbiotic</a>, a generalized shared security system enabling decentralized networks to bootstrap powerful, fully sovereign ecosystems.
+    <li><a href="https://symbiotic.box" target="_blank">symbiotic.box</a> - Redirects to <a href="https://symbiotic.fi/" target="_blank">Symbiotic</a>, a generalized shared security system enabling decentralized networks to bootstrap powerful, fully sovereign ecosystems.</li>
+    <li><a href="https://bio.box" target="_blank">bio.box</a> - A user-friendly link in bio tool born from the Outlier Ventures accelerator program.</li>
 </ul>
 
 <h2>brands</h2>
