--- a/list.html
+++ b/list.html
@@ -151,6 +151,7 @@
     <li><a href="https://cypherpunk.box" target="_blank">cypherpunk.box</a> - A clean forwarder for my X profile, to keep it simple and professional.</li>
     <li><a href="https://yx.box" target="_blank">yx.box</a> - A blockchain dice game launchpad. Let's make Ethereum great again! By Singularity DAO.</li>
     <li><a href="https://dude.box" target="_blank">dude.box</a> - A community where men can be real, feel supported, and look good doing it.</li>
+    <li><a href="https://pen.box" target="_blank">pen.box</a> - A personal website dedicated to the topics of investment and entrepreneurship.</li>
 </ul>
 
 <h2>utilities</h2>
