removing old outdated entries

--- a/list.html
+++ b/list.html
@@ -151,17 +151,14 @@
     <li><a href="https://cypherpunk.box" target="_blank">cypherpunk.box</a> - A clean forwarder for my X profile, to keep it simple and professional.</li>
     <li><a href="https://yx.box" target="_blank">yx.box</a> - A blockchain dice game launchpad. Let's make Ethereum great again! By Singularity DAO.</li>
     <li><a href="https://dude.box" target="_blank">dude.box</a> - A community where men can be real, feel supported, and look good doing it.</li>
-    <li><a href="https://pen.box" target="_blank">pen.box</a> - A personal website dedicated to the topics of investment and entrepreneurship.</li>
 </ul>
 
 <h2>utilities</h2>
 <ul>
     <li><a href="https://seo.box" target="_blank">seo.box</a> - SEO tools list website.</li>
     <li><a href="https://tools.box" target="_blank">tools.box</a> - A box of miscellaneous tools from text tools, image tools, and more.</li>
-    <li><a href="https://url.box" target="_blank">url.box</a> - Tools for handling Atomicals NFTs.</li>
     <li><a href="https://s.box" target="_blank">s.box</a> - URL shortener by <a href="https://www.github.com/bernatfp" target="_blank">@bernatfp</a>.</li>
     <li><a href="https://all.box" target="_blank">all.box</a> - .box For-Sale Lander generator tool by <a href="https://NameMaxi.com" target="_blank">NameMaxi.com</a>.</li>
-    <li><a href="https://register.box" target="_blank">register.box</a> - Website to monitor the primary and secondary sales of .box domains.</li>
 </ul>
 
 <h2>projects</h2>
@@ -177,7 +174,7 @@
     <li><a href="https://phi.box" target="_blank">phi.box</a> - The visualization layer for onchain identity.</li>
     <li><a href="https://bike.box" target="_blank">bike.box</a> - Website for the League of American Bicyclists, providing resources to find local advocacy groups, bike shops, instructors, clubs, and classes.</li>
     <li><a href="https://foto.box" target="_blank">foto.box</a> - Platform to find and rent photo booths in Germany.</li>
-    <li><a href="https://brand.box" target="_blank">brand.box</a> - Redirects to <a href="https://top.digital" target="_blank">Top Digital</a>, a domain branding marketplace.</li>
+    <li><a href="https://brand.box" target="_blank">brand.box</a> - For-sale lander.</li>
     <li><a href="https://symbiotic.box" target="_blank">symbiotic.box</a> - Redirects to <a href="https://symbiotic.fi/" target="_blank">Symbiotic</a>, a generalized shared security system enabling decentralized networks to bootstrap powerful, fully sovereign ecosystems.</li>
     <li><a href="https://bio.box" target="_blank">bio.box</a> - A user-friendly link in bio tool born from the Outlier Ventures accelerator program.</li>
 </ul>
@@ -194,7 +191,7 @@
 
 <h3>disclaimer</h3>
     <p>
-        The domains listed on this page are independently owned and operated by third parties and are not directly affiliated with My.box Inc. My.box Inc. does not endorse, manage, or take responsibility for the content, services, or activities hosted on these domains. Please review each domain’s individual site and policies for further information.
+        The domains listed on this page are independently owned and operated by third parties and are not directly affiliated with My.box Inc. My.box Inc. does not endorse, manage, or take responsibility for the content, services, or activities hosted on these domains. Please review each domain's individual site and policies for further information.
     </p>
 
 </body>
