--- a/list.html
+++ b/list.html
@@ -177,6 +177,7 @@
     <li><a href="https://brand.box" target="_blank">brand.box</a> - For-sale lander.</li>
     <li><a href="https://symbiotic.box" target="_blank">symbiotic.box</a> - Redirects to <a href="https://symbiotic.fi/" target="_blank">Symbiotic</a>, a generalized shared security system enabling decentralized networks to bootstrap powerful, fully sovereign ecosystems.</li>
     <li><a href="https://bio.box" target="_blank">bio.box</a> - A user-friendly link in bio tool born from the Outlier Ventures accelerator program.</li>
+    <li><a href="https://recruitment.box" target="_blank">recruitment.box</a> - A platform to match web3 talent to work opportunities with via onchain data.</li>
 </ul>
 
 <h2>brands</h2>
